crates/aranya-policy-compiler/tests/data/misc/deserialize_invalid_expression.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
   |
 9 | function err() struct Foo {
10 |     return deserialize(get_bytes())
   |            ^^^^^^^^^^^^^^^^^^^^^^^^ 'deserialize' can only be used in the 'open' block of a command
11 | }
   |
